# irohms_robots_tests

./: .project  README.md
tests_a1/: README.md
tests_a1/test_a1_common_bringup/: CMakeLists.txt  package.xml
tests_a1/test_a1_desktop_bringup/: CMakeLists.txt  package.xml
tests_a1/test_a1_simulation_bringup/: CMakeLists.txt  package.xml
tests_cob4/: README.md
tests_cob4/test_cob4_common_bringup/: CMakeLists.txt  package.xml
tests_cob4/test_cob4_common_bringup/env-hooks/: 99.test_cob4_common_functions.bash
tests_cob4/test_cob4_common_bringup/parameters/tools/rviz/: amcl.rviz  default.rviz
tests_cob4/test_cob4_common_bringup/src/: cob4_moveit_demo.cpp  cob4_moveit_home.cpp
tests_cob4/test_cob4_desktop_bringup/: CMakeLists.txt  package.xml
tests_cob4/test_cob4_desktop_bringup/env-hooks/: 99.test_cob4_desktop_functions.bash
tests_cob4/test_cob4_desktop_bringup/launch/: base_teleop.launch  rqt.launch  rviz.launch
tests_cob4/test_cob4_simulation_bringup/: CMakeLists.txt  README.MD  package.xml
tests_cob4/test_cob4_simulation_bringup/env-hooks/: 99.test_cob4_simulation_functions.bash
tests_cob4/test_cob4_simulation_bringup/launch/: empty_world.launch  full.launch  localization.launch  mapping.launch  navigation.launch  start.launch
tests_cob4/test_cob4_simulation_bringup/maps/: map.pgm
tests_cob4/test_cob4_simulation_bringup/param/: physics_gazebo.yaml
tests_iiwa/: README.md
tests_iiwa/test_iiwa_common_bringup/: CMakeLists.txt  package.xml
tests_iiwa/test_iiwa_common_bringup/env-hooks/: 99.test_cob4_common_functions.bash
tests_iiwa/test_iiwa_common_bringup/parameters/tools/rviz/: default.rviz
tests_iiwa/test_iiwa_desktop_bringup/: CMakeLists.txt  package.xml
tests_iiwa/test_iiwa_desktop_bringup/env-hooks/: 99.test_iiwa_desktop_functions.bash
tests_iiwa/test_iiwa_simulation_bringup/: CMakeLists.txt  package.xml
tests_iiwa/test_iiwa_simulation_bringup/env-hooks/: 99.test_iiwa_simulation_functions.bash
tests_iiwa/test_iiwa_simulation_bringup/launch/: full.launch
tests_pepper/: README.md
tests_pepper/test_pepper_common_bringup/: CMakeLists.txt  package.xml
tests_pepper/test_pepper_common_bringup/env-hooks/: 99.test_pepper_common_functions.bash
tests_pepper/test_pepper_common_bringup/parameters/tools/rviz/: default.rviz
tests_pepper/test_pepper_common_bringup/src/: pepper_moveit_demo.cpp  pepper_moveit_home.cpp
tests_pepper/test_pepper_desktop_bringup/: CMakeLists.txt  package.xml
tests_pepper/test_pepper_desktop_bringup/env-hooks/: 99.test_pepper_desktop_functions.bash
tests_pepper/test_pepper_desktop_bringup/launch/: base_teleop.launch  rviz.launch
tests_pepper/test_pepper_simulation_bringup/: CMakeLists.txt  package.xml
tests_pepper/test_pepper_simulation_bringup/config/: costmap_common_params.yaml  pepper_lds_pure2d.lua
tests_pepper/test_pepper_simulation_bringup/env-hooks/: 99.test_pepper_simulation_functions.bash
tests_pepper/test_pepper_simulation_bringup/launch/: full.launch
tests_pepper/test_pepper_simulation_bringup/maps/: map.pgm  map.yaml
tests_pepper/test_pepper_simulation_bringup/param/: physics_gazebo.yaml
tests_rbvogui/: README.md
tests_rbvogui/helper/: pre_install.py  requirements.txt
tests_rbvogui/test_rbvogui_common_bringup/: CMakeLists.txt  package.xml
tests_rbvogui/test_rbvogui_common_bringup/env-hooks/: 99.test_rbvogui_common_functions.bash
tests_rbvogui/test_rbvogui_common_bringup/parameters/tools/rviz/: default.rviz  map.rviz  moveit.rviz
tests_rbvogui/test_rbvogui_common_bringup/src/: rbvogui_moveit_demo.py
tests_rbvogui/test_rbvogui_desktop_bringup/: CMakeLists.txt  package.xml
tests_rbvogui/test_rbvogui_desktop_bringup/env-hooks/: 99.test_rbvogui_desktop_functions.bash
tests_rbvogui/test_rbvogui_desktop_bringup/launch/: rviz.launch
tests_rbvogui/test_rbvogui_simulation_bringup/: CMakeLists.txt  package.xml
tests_rbvogui/test_rbvogui_simulation_bringup/env-hooks/: 99.test_rbvogui_simulation_functions.bash
tests_rbvogui/test_rbvogui_simulation_bringup/launch/: full.launch
