<?xml version="1.0"?>
<package format="2">
  <name>test_a1_desktop_bringup</name>
  <version>0.0.0</version>
  <description>The test_a1_desktop_bringup package</description>

  <maintainer email="sasm@todo.todo">sasm</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>