<package format="2">
  <name>test_iiwa_common_bringup</name>
  <version>0.0.0</version>
  <description>The test_iiwa_common_bringup package</description>

  <maintainer email="HernandezVegaJ@cardiff.ac.uk">Juan D. Hernandez Vega</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>

  <!-- Cob4 -->
  <depend>cob_navigation</depend>
  <depend>cob_moveit_bringup</depend>
  <!--depend>cob_pick_place_action</depend-->
 
  <!-- World model 
  <depend>map_server</depend>
  <depend>amcl</depend>
  <depend>gmapping</depend>
  <depend>octomap</depend>
  <depend>octomap_rviz_plugins</depend> -->

  <!-- Navigation
  <depend>robot_localization</depend>  -->
  
  <!-- Moveit  -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_perception</depend>

</package>
