<?xml version="1.0"?>
<package format="2">
  <name>test_pepper_common_bringup</name>
  <version>0.0.0</version>
  <description>The test_pepper_common_bringup package</description>

  <maintainer email="sasilva1998@gmail.com">sasm</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
