<?xml version="1.0"?>
<package format="2">
  <name>test_pepper_desktop_bringup</name>
  <version>0.0.0</version>
  <description>The test_pepper_desktop_bringup package</description>

  <maintainer email="sasilva1998@gmail.com">sasm</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Test Pepper -->
  <depend>test_pepper_common_bringup</depend>

  <depend>rqt_gui</depend>
  <depend>rviz</depend>
</package>