<package format="2">
  <name>test_rbvogui_common_bringup</name>
  <version>0.0.0</version>
  <description>
    The test_rbvogui_common_bringup package. 
    Navigation and manipulator arm scripted demos for rbvogui with ur5 arm and rg2 grippper.
  </description>
  
  <maintainer email="HernandezVegaJ@cardiff.ac.uk">Juan D. Hernandez Vega</maintainer>
  <maintainer email="AtibaS@cardiff.ac.uk">Samuelson T. Atiba</maintainer>
  
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
  <!-- Robotnik -->
  <depend>rbvogui_ur5_rg2_moveit</depend>
  <depend>moveit_commander</depend>
  
  <!-- Moveit 
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_perception</depend>  -->

</package>
