<package format="2">
  <name>test_rbvogui_desktop_bringup</name>
  <version>0.0.0</version>
  <description>The test_rbvogui_desktop_bringup package</description>

  <maintainer email="HernandezVegaJ@cardiff.ac.uk">Juan D. Hernandez Vega</maintainer>
  <maintainer email="AtibaS@cardiff.ac.uk">Samuelson T. Atiba</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>test_rbvogui_common_bringup</depend>
</package>
